--- a/client/src/Pages/site/Cart/style.scss
+++ b/client/src/Pages/site/Cart/style.scss
@@ -4,6 +4,9 @@
   .cart-container {
     background-color: black;
     padding: 2rem 4rem;
+    @media only screen and (max-width: 640px) {
+      padding: 1rem 1rem;
+    }
     h2 {
       color: white;
       font-weight: 400;
@@ -39,7 +42,6 @@
   .cart-item,
   .cart-container .titles {
     color: white;
-
     display: grid;
     align-items: center;
     grid-template-columns: 3fr 1fr 1fr 1fr;
@@ -53,54 +55,63 @@
   }
   .cart-container .titles .product-title {
     color: white;
-
     padding-left: 0.5rem;
+    @media only screen and (max-width: 640px) {
+      padding-left: 0;
+    }
   }
   .cart-container .titles .total {
     color: white;
-
     padding-right: 0.5rem;
     justify-self: right;
   }
   .cart-item .cart-product {
     color: white;
-
     display: flex;
+    align-items: center;
   }
   .cart-item .cart-product img {
     color: white;
-
     width: 100px;
     max-width: 100%;
     margin-right: 1rem;
+    @media only screen and (max-width: 640px) {
+      width: 50px;
+      height: 50px;
+    }
   }
   .cart-item .cart-product h3 {
     color: white;
-
     font-weight: 400;
+    @media only screen and (max-width: 640px) {
+      font-size: 10px;
+    }
   }
   .cart-item .cart-product button {
     color: white;
-
     border: none;
     outline: none;
     margin-top: 0.7rem;
     cursor: pointer;
     background: none;
     color: gray;
+    @media only screen and (max-width: 640px) {
+      margin-top: 0;
+    }
   }
   .cart-item .cart-product button:hover {
     color: white;
-
     color: black;
   }
   .cart-product-price {
     font-family: chillax-regular;
     font-size: 20px;
+    @media only screen and (max-width: 640px) {
+      font-size: 15px;
+    }
   }
   .cart-item .cart-product-quantity {
     color: white;
-
     display: flex;
     align-items: center;
     justify-content: center;
@@ -108,36 +119,46 @@
     max-width: 100%;
     border: 0.5px solid rgb(177, 177, 177);
     border-radius: 5px;
+    @media only screen and (max-width: 640px) {
+      width: 70px;
+    }
   }
   .cart-item .cart-product-quantity button {
     color: white;
-
     border: none;
     outline: none;
     background: none;
     padding: 0.7rem 1.5rem;
     cursor: pointer;
+    @media only screen and (max-width: 640px) {
+      padding: 0.1rem 0.8rem;
+    }
   }
   .cart-item .cart-product-quantity .count {
     color: white;
-
     padding: 0.7rem 0;
     font-family: chillax;
+    @media only screen and (max-width: 640px) {
+      padding: 0.3rem 0;
+      font-size: 15px;
+    }
   }
   .cart-item .cart-product-total-price {
     color: white;
-
     padding-right: 0.5rem;
     justify-self: right;
     font-weight: 700;
     font-family: chillax-regular;
     font-size: 20px;
+    @media only screen and (max-width: 640px) {
+      font-size: 15px;
+      padding-right: 1rem;
+    }
   }
 
   /* cart summary */
   .cart-summary {
     color: white;
-
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -146,7 +167,6 @@
   }
   .cart-summary .clear-btn {
     color: white;
-
     width: 130px;
     height: 40px;
     border-radius: 5px;
@@ -157,30 +177,40 @@
     outline: none;
     cursor: pointer;
     font-family: chillax-regular;
+    @media only screen and (max-width: 640px) {
+     width: 100px;
+     height: 30px;
+     font-size: 15px;
+    }
   }
   .cart-checkout {
     color: white;
-
     width: 270px;
     max-width: 100%;
+    @media only screen and (max-width: 640px) {
+      width: 220px;
+    }
   }
   .cart-checkout .subtotal {
     color: white;
-
     display: flex;
     justify-content: space-between;
     font-size: 20px;
     font-family: chillax-regular;
+    @media only screen and (max-width: 640px) {
+     font-size: 18px;
+    }
   }
   .cart-checkout .amount {
     color: white;
-
     font-weight: 700;
     font-family: chillax-regular;
+    @media only screen and (max-width: 640px) {
+      font-size: 15px;
+    }
   }
   .cart-checkout p {
     color: white;
-
     font-size: 14px;
     font-weight: 200;
     margin: 0.5rem 0;
@@ -196,6 +226,10 @@
     border: none;
     outline: none;
     cursor: pointer;
+    @media only screen and (max-width: 640px) {
+      height: 25px;
+      width: 150px;
+    }
   }
 
   .cart-checkout .cart-login {
