--- a/client/src/Pages/site/Success/style.scss
+++ b/client/src/Pages/site/Success/style.scss
@@ -15,6 +15,9 @@
     width: 580px;
     text-align: center;
     gap: 10px;
+    @media only screen and (max-width: 640px) {
+     width : 100%;
+    }
     .shopp {
       font-family: bitter-rose;
       color: #face8d;
