--- a/client/src/Pages/site/Change-Password/style.scss
+++ b/client/src/Pages/site/Change-Password/style.scss
@@ -1,13 +1,7 @@
 .full-change {
   width: 100%;
   height: 100vh;
-  --tw-bg-opacity: 1;
-  background: #f12711; /* fallback for old browsers */
-  background: linear-gradient(
-    to right,
-    #9b6e0e,
-    #2c0602
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-color: black;
   display: flex;
   align-items: center;
   justify-content: center;
