--- a/client/src/Pages/site/Sign-in/style.scss
+++ b/client/src/Pages/site/Sign-in/style.scss
@@ -1,7 +1,7 @@
 .full-sign {
   width: 100%;
   height: 100vh;
-  background-color: black;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
