--- a/client/src/Pages/site/Sign-up/style.scss
+++ b/client/src/Pages/site/Sign-up/style.scss
@@ -1,6 +1,6 @@
 .full-divs {
   width: 100%;
-  background-color: black;
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
