--- a/client/src/Pages/site/Change-Password/style.scss
+++ b/client/src/Pages/site/Change-Password/style.scss
@@ -1,7 +1,7 @@
 .full-change {
   width: 100%;
   height: 100vh;
-  background-color: white;
+  background-color: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,7 +19,7 @@
     flex-direction: column;
     justify-content: center;
     --tw-bg-opacity: 1;
-    background-color: rgb(236, 201, 201);
+    background-color: white;
     padding: 0.75rem;
     @media screen and (max-width: 978px) {
       width: 50%;
