--- a/client/src/Pages/site/Sign-in/style.scss
+++ b/client/src/Pages/site/Sign-in/style.scss
@@ -1,7 +1,14 @@
 .full-sign {
   width: 100%;
   height: 100vh;
-  background-color: white;
+  --tw-bg-opacity: 1;
+  background: #f12711; /* fallback for old browsers */
+  background: linear-gradient(
+    to right,
+    #9b6e0e,
+    #2c0602
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   display: flex;
   align-items: center;
   justify-content: center;
