--- a/client/src/Pages/site/Change-Password/style.scss
+++ b/client/src/Pages/site/Change-Password/style.scss
@@ -1,7 +1,13 @@
 .full-change {
   width: 100%;
   height: 100vh;
-  background-color: black;
+  --tw-bg-opacity: 1;
+  background: #f12711; /* fallback for old browsers */
+  background: linear-gradient(
+    to right,
+    #9b6e0e,
+    #2c0602
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -19,7 +25,7 @@
     flex-direction: column;
     justify-content: center;
     --tw-bg-opacity: 1;
-    background-color: white;
+    background-color: rgb(236, 201, 201);
     padding: 0.75rem;
     @media screen and (max-width: 978px) {
       width: 50%;
