--- a/client/src/Pages/site/Change-Password/style.scss
+++ b/client/src/Pages/site/Change-Password/style.scss
@@ -2,13 +2,7 @@
   width: 100%;
   height: 100vh;
   --tw-bg-opacity: 1;
-  background: #f12711; /* fallback for old browsers */
-  background: linear-gradient(
-    to right,
-    #9b6e0e,
-    #2c0602
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  display: flex;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
   align-items: center;
   justify-content: center;
   position: fixed;
@@ -25,7 +19,7 @@
     flex-direction: column;
     justify-content: center;
     --tw-bg-opacity: 1;
-    background-color: rgb(236, 201, 201);
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
     padding: 0.75rem;
     @media screen and (max-width: 978px) {
       width: 50%;
@@ -40,7 +34,7 @@
       text-align: center;
       font-family: bitter-rose;
       margin-bottom: 1.25rem;
-      color: #ffb23e;
+      color: #face8d
       font-size: 3.75rem;
       line-height: 1;
       @media screen and (max-width: 478px) {
@@ -77,7 +71,6 @@
         font-size: 0.875rem;
         line-height: 1.25rem;
         border-radius: 0.375rem;
-        background-color: rgb(221, 210, 210);
         outline: 2px solid transparent;
         outline-offset: 2px;
         font-family: "chillax-regular";
@@ -105,16 +98,14 @@
       text-align: center;
       font-family: chillax;
       --tw-bg-opacity: 1;
-      background-color: #e49b2e;
-
+      background-color: rgb(79 70 229 / var(--tw-bg-opacity));
       --tw-text-opacity: 1;
       color: rgb(255 255 255 / var(--tw-text-opacity));
       border-radius: 0.375rem;
       transition-duration: 300ms;
       &:hover {
         --tw-bg-opacity: 1;
-        background-color: #976924;
-
+        background-color: rgb(55 48 163 / var(--tw-bg-opacity));
         width: 100%;
       }
     }
