--- a/client/src/Pages/site/Change-Password/style.scss
+++ b/client/src/Pages/site/Change-Password/style.scss
@@ -3,6 +3,7 @@
   height: 100vh;
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  display: flex;
   align-items: center;
   justify-content: center;
   position: fixed;
@@ -34,7 +35,7 @@
       text-align: center;
       font-family: bitter-rose;
       margin-bottom: 1.25rem;
-      color: #face8d
+      color: #face8d;
       font-size: 3.75rem;
       line-height: 1;
       @media screen and (max-width: 478px) {
@@ -73,7 +74,6 @@
         border-radius: 0.375rem;
         outline: 2px solid transparent;
         outline-offset: 2px;
-        font-family: "chillax-regular";
         &::placeholder {
           font-family: "chillax-regular";
         }
