--- a/client/src/Pages/site/Sign-up/style.scss
+++ b/client/src/Pages/site/Sign-up/style.scss
@@ -1,13 +1,7 @@
 .full-divs {
   width: 100%;
   --tw-bg-opacity: 1;
-  background: #f12711; /* fallback for old browsers */
-  background: linear-gradient(
-    to right,
-    #9b6e0e,
-    #2c0602
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +15,7 @@
     flex-direction: column;
     justify-content: center;
     --tw-bg-opacity: 1;
-    background-color: rgb(236, 201, 201);
+    background-color: rgb(255 255 255 / var(--tw-bg-opacity));
     padding: 0.75rem;
     @media screen and (max-width: 978px) {
       width: 50%;
@@ -36,7 +30,7 @@
       text-align: center;
       font-family: bitter-rose;
       margin-bottom: 1.25rem;
-      color: #ffb23e;
+      color: #face8d;
       font-size: 3.75rem;
       line-height: 1;
       @media screen and (max-width: 478px) {
@@ -69,8 +63,6 @@
         line-height: 1.25rem;
         border-radius: 0.375rem;
         outline: 2px solid transparent;
-        background-color: rgb(221, 210, 210);
-        font-family: "chillax-regular";
         outline-offset: 2px;
         &::placeholder {
           font-family: "chillax-regular";
@@ -95,14 +87,14 @@
       text-align: center;
       font-family: chillax;
       --tw-bg-opacity: 1;
-      background-color: #e49b2e;
+      background-color: rgb(79 70 229 / var(--tw-bg-opacity));
       --tw-text-opacity: 1;
       color: rgb(255 255 255 / var(--tw-text-opacity));
       border-radius: 0.375rem;
       transition-duration: 300ms;
       &:hover {
         --tw-bg-opacity: 1;
-        background-color: #976924;
+        background-color: rgb(55 48 163 / var(--tw-bg-opacity));
         width: 100%;
       }
     }
